Bug 3953 - ld crashes upon use of .gnu.warning.<symbol> sections
Summary: ld crashes upon use of .gnu.warning.<symbol> sections
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: ld (show other bugs)
Version: 2.17
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-02 01:07 UTC by Bruno Haible
Modified: 2007-02-14 14:37 UTC (History)
2 users (show)

See Also:
Host: i586-suse-linux
Target: i586-suse-linux
Build: i586-suse-linux
Last reconfirmed:


Attachments
Input to the assembler (165 bytes, text/plain)
2007-02-02 01:09 UTC, Bruno Haible
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Haible 2007-02-02 01:07:41 UTC
A simple program intended to emit a warning messages crashes the linker. 
 
foo.s is attached (created from gcc-3.3.1 output) 
$ as -o foo.o foo.s 
$ ld foo.o /lib/libc.so.6 
foo.o: In function `main': 
foo.c:(.text+0x1): warning: function strstr is deprecated 
ld: warning: cannot find entry symbol _start; defaulting to 08048158 
Segmentation fault
Comment 1 Bruno Haible 2007-02-02 01:09:07 UTC
Created attachment 1529 [details]
Input to the assembler
Comment 2 H.J. Lu 2007-02-02 19:52:23 UTC
A patch is posted at

http://sourceware.org/ml/binutils/2007-02/msg00022.html
Comment 3 H.J. Lu 2007-02-03 07:31:17 UTC
I got a positive feedback.
Comment 4 H.J. Lu 2007-02-14 14:37:55 UTC
Fixed.